--- a/fd-calculator.html
+++ b/fd-calculator.html
@@ -55,9 +55,12 @@
                             <p class="header__accordion-title">Calculators</p>
                             <div class="header__accordion-content">
                                 <div>
-                                    <a href="rd-calculator.html" class="header__accordion-content-title">RD Calculator</a>
-                                    <a href="fd-calculator.html" class="header__accordion-content-title">FD Calculator</a>
-                                    <a href="emi-calculator.html" class="header__accordion-content-title">EMI Calculator</a>
+                                    <a href="rd-calculator.html" class="header__accordion-content-title">RD
+                                        Calculator</a>
+                                    <a href="fd-calculator.html" class="header__accordion-content-title">FD
+                                        Calculator</a>
+                                    <a href="emi-calculator.html" class="header__accordion-content-title">EMI
+                                        Calculator</a>
                                 </div>
                             </div>
                             <img class="header__accordion-chevron" src="assets/icons/chevron.svg" alt="chevron">
@@ -199,7 +202,10 @@
     <section class="content-block grey-bg">
         <div class="content-block-container">
             <h2 class="content-block__title">What are fixed deposits (FD)?</h2>
-            <p class="content-block__desc">A Fixed Deposit (FD) is a type of investment offered by banks and financial institutions where you deposit a lump sum amount for a fixed tenure at a predetermined interest rate. In return, the bank pays you interest on the principal amount over the chosen period, and at the end of the term, you get back your principal along with the accrued interest.</p>
+            <p class="content-block__desc">A Fixed Deposit (FD) is a type of investment offered by banks and financial
+                institutions where you deposit a lump sum amount for a fixed tenure at a predetermined interest rate. In
+                return, the bank pays you interest on the principal amount over the chosen period, and at the end of the
+                term, you get back your principal along with the accrued interest.</p>
         </div>
     </section>
     <section class="content-block" id="calculators">
@@ -213,8 +219,8 @@
                         <h2 class="card__title">RD Calculator</h2>
                         <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a class="card-link"><span class="card-link-text">Calculate Now</span><img
-                                class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
+                        <a href="rd-calculator.html" class="card-link"><span class="card-link-text">Calculate
+                                Now</span><img class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
                     </div>
                 </div>
                 <div class="card-container">
@@ -223,8 +229,8 @@
                         <h2 class="card__title">EMI Calculator</h2>
                         <p class="card__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <a class="card-link"><span class="card-link-text">Calculate Now</span><img
-                                class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
+                        <a href="emi-calculator.html" class="card-link"><span class="card-link-text">Calculate
+                                Now</span><img class="card-link-icon" src="assets/icons/arrow-right.svg"></a>
                     </div>
                 </div>
             </div>
